--- a/Website for myProject4/Bars.html
+++ b/Website for myProject4/Bars.html
@@ -4,7 +4,7 @@
 		<link href="style.css" rel="stylesheeet">
 	</head>
 
-		<body>
+		<body style="background-color:FFDF00;">
 			<h1> It is better to go to sports bar when multiple games are going on at same time since they have TV screens.</h1>
 			<p>Make sure to get some chicken wings and nachos.</p>
 
