--- a/Website for myProject4/Pitching.html
+++ b/Website for myProject4/Pitching.html
@@ -4,7 +4,7 @@
 		<link href="style.css" rel="stylesheeet">
 	</head>
 
-		<body>
+		<body style="background-color:FFDF00;">
 			<h1> Playing baseball is so much fun. </h1>
 			<p>I can't wait to begin our baseball season.</p>
 
