--- a/Website for myProject4/baseball.html
+++ b/Website for myProject4/baseball.html
@@ -4,7 +4,7 @@
 		<link href="style.css" rel="stylesheeet">
 	</head>
 
-		<body>
+		<body style="background-color:FFDF00;">
 			<h1> Ways to Enjoy Baseball for Myself. </h1>
 			<p><a href="Pitching.html">1.Play for a team.</a></p>
 
