--- a/Website for myProject4/football-game-bars.html
+++ b/Website for myProject4/football-game-bars.html
@@ -6,7 +6,7 @@
 
 		<body>
 			<h1>Going to Sports Bars to Watch Games.</h1>
-			<p>Benefit of going to sports bars to watch games is that they have many TV screens that you can watch diffrent games at same time.
+			<p>Benefit of going to sports bars is that they have many TV screens that you can watch diffrent games at same time.
 
 
 			<p><image src="Images/Football/screens.JPG" Width="350"/></p>
