--- a/Website for myProject4/Going.html
+++ b/Website for myProject4/Going.html
@@ -4,9 +4,9 @@
 		<link href="style.css" rel="stylesheeet">
 	</head>
 
-		<body>
+		<body style="background-color:FFDF00;">
 			<h1> It's so nice to be there, have drinks. </h1>
-			<p>Baseball games</p>
+			<p>Attending Baseball Games. You might be able to catch a HR ball.</p>
 
 			<img src="Images/Baseball/beer.jpg" width="300"/>
 
