--- a/Website for myProject4/Index.html
+++ b/Website for myProject4/Index.html
@@ -4,7 +4,7 @@
 		<link href="style.css" rel="stylesheeet">
 	</head>
 
-		<body>
+		<body style="background-color:FFDF00;">
 			<h1>My Favorite Sports.</h1>
 			<h2>I love seeing special moments in Sports.</h2>
 			<P> There are so many diffrent kind of sports. However, there are two sports that I really like. They are baseball and football.</P>
